...
            android:layout_height="match_parent"
            android:id="@+id/gv_main" />-->

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ar_view"
            android:name="com.whoissio.arthings.src.infra.utils.MyArFragment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
...
